tests/ui/async-await/async-closures/arg-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/arg-mismatch.rs:10:11
   |
LL |         c(2usize).await;
   |         - ^^^^^^ expected `i32`, found `usize`
   |         |
   |         arguments to this function are incorrect
   |
note: closure parameter defined here
  --> $DIR/arg-mismatch.rs:8:24
   |
LL |         let c = async |x| {};
   |                        ^
help: change the type of the numeric literal from `usize` to `i32`
   |
LL -         c(2usize).await;
LL +         c(2i32).await;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
